# smart-descriptor

./: README.md
include/: LuaDescriptor.h  SQLite3Descriptors.h  SmartDescriptor.h
tests/: CMakeLists.txt  main.cpp
tests/lua/: LuaDescriptorTestSuite.cpp  LuaDescriptorTestSuite.h
tests/sqlite3/: SQLite3DescriptorsTestSuite.cpp  SQLite3DescriptorsTestSuite.h
